# scop

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake-doxygen.yml
doxygen/: CMakeLists.txt  definitions.cmake
shaders/: compile.sh  shader.frag  shader.vert
src/: Image.hpp  Main.cpp  Math.hpp  Parsing.cpp  VulkanApp.hpp  VulkanClean.cpp  VulkanDebug.cpp  VulkanIndex.cpp  VulkanInit.cpp  VulkanPipeline.cpp  VulkanRender.cpp  VulkanTexture.cpp  VulkanVertex.cpp  main.cpp
